[package]
name = "pagers"
version = "1.0.0"
authors = ["Charles Tabor <ct37@txstate.edu>"]

[dependencies]
chrono = "0.4.2"
filetime = "0.2.1"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "1.0.55"
serde_derive = "1.0.55"
serde_json = "1.0.17"
lazy_static = "1.0.1"
percent-encoding = "1.0.1"
crossbeam-channel = "0.2.1"
regex = "1.0.0"
reqwest = "0.8.6"
# match hyper with reqwest version
hyper = "0.11.27"
