[package]
name = "pagers"
version = "1.1.0"
authors = ["Charles Tabor <ct37@txstate.edu>"]

[dependencies]
chrono = "0.4.10"
filetime = "0.2.8"
failure = "0.1.6"
failure_derive = "0.1.6"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
crossbeam-channel = "0.4.0"
regex = "1.3.4"
reqwest = {version="0.10.1", features=["blocking", "native-tls-vendored"]}
# match hyper with reqwest version
hyper = "0.13.2"
